--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background-color: set-text-color($primary-color);
+        background-color: #000;
         @include easeOut;
     }
 
