--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -55,7 +55,7 @@
             font-size: 1rem;
             top: 50%;
             transform: translateY(-50%);
-            color: lighten((set-text-color($primary-color)), 30);
+            color: lighten(($primary-color), 30);
             cursor: pointer;
             padding: 0.5rem;
         }
